--- a/style.css
+++ b/style.css
@@ -5,5 +5,126 @@
 }
 
 body {
-    background-color: aqua;
+    display: grid;
+    grid-template-rows: 100px 1fr;
+    background-color: rgb(112, 85, 11);
+}
+
+.header {
+    justify-self: center;
+    padding: 20px;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 2rem;
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(201, 128, 68);
+}
+
+.header button:hover {
+    opacity: 90%;
+}
+
+form .on {
+    display: block;
+}
+
+form {
+    display: none;
+    position: absolute;
+    left: calc(50% - 250px);
+    top: calc(50% - 250px);
+    width: 500px;
+    height: 500px;
+    background-color: rgb(228, 203, 166);
+    z-index: 2;
+    padding: 20px;
+}
+
+form .form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+}
+
+form .form-container label {
+    flex: 1;
+    font-size: 3rem;
+}
+
+form .form-container input {
+    flex: 1;
+    width: 275px;
+    font-size: 2rem;
+    background-color: white;
+}
+
+form .form-container div {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+form:target,
+form:target+.cover {
+    display: block;
+    opacity: 2;
+}
+
+form #read {
+    width: 50px;
+    height: 50px;
+    accent-color: rgb(201, 128, 68);
+}
+
+form button {
+    font-size: 3rem;
+    width: 200px;
+    border: none;
+    border-radius: 15px;
+    padding: 10px 20px;
+}
+
+.green {
+    background-color: green;
+}
+
+.red {
+    background-color: red;
+}
+
+.cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+
+.content {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-gap: 30px;
+}
+
+.book {
+    height: 400px;
+    background-color: goldenrod;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 1fr);
+    justify-items: center;
+    align-items: center;
+    font-size: 2.5rem;
+    overflow-wrap: break-word;
+    text-align: center;
 }
