--- a/style.css
+++ b/style.css
@@ -113,18 +113,18 @@ form button {
     padding-left: 20px;
     padding-right: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 30px;
 }
 
 .book {
-    height: 400px;
+    height: 300px;
     background-color: goldenrod;
     display: grid;
     grid-template-rows: repeat(auto-fill, 1fr);
     justify-items: center;
     align-items: center;
-    font-size: 2.5rem;
-    overflow-wrap: break-word;
+    font-size: 1.5rem;
+    word-break: break-all;
     text-align: center;
 }
